--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,31 +81,35 @@
                         <button class="btn btn-primary" type="submit">Kết thúc</button>
                     </form>
                 <% } else { %>
-                    <p class="font-weight-bold">Số giờ đã làm <%= Math.round(total/(1000*60*60)*100, 2)/100 %></p>
+                    <p class="font-weight-bold">Số giờ đã làm <%= Math.round(total/(1000*60*60)*10, 2)/10 %></p>
                 <% } %>
             </div>
 
             <div id="tab3" class="tab-pane fade <%= tab === 3 ? 'show active' : '' %>">
                 <h4>Nghỉ phép</h4>
-                <form action="/nghiphep" method="post">
-                    <div class="form-group">
-                        <label for="inp-date">Ngày</label>
-                        <input type="date" class="form-control" name="date" id="inp-date">
-                    </div>
-                    <div class="form-group">
-                        <label for="inp-timebreak">Số giờ nghỉ</label>
-                        <input type="number" class="form-control" name="breaktime" id="inp-timebreak" max="8" min="1">
-                        <p id="time-text" class="form-text"></p>
-                    </div>
-                    <div class="form-group">
-                        <label for="inp-reason">Lý do</label>
-                        <textarea class="form-control" name="reason" id="inp-reason" rows="3"></textarea>
-                    </div>
-                    <p class="font-weight-bold text-right">Số ngày nghỉ còn lại: <%= staff.annualLeave %></p>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
+                <p class="font-weight-bold text-right">Số ngày nghỉ còn lại: <%= Math.round(staff.annualLeave*100)/100 %></p>
+                <% if (staff.annualLeave > 0) { %>
+                    <form action="/nghiphep" method="post">
+                        <div class="form-group">
+                            <label for="inp-date">Ngày</label>
+                            <input type="date" class="form-control" name="date" id="inp-date">
+                        </div>
+                        <div class="form-group">
+                            <label for="inp-timebreak">Số giờ nghỉ</label>
+                            <input type="number" class="form-control" name="breaktime" id="inp-timebreak" max="8" min="1">
+                            <p id="time-text" class="form-text"></p>
+                        </div>
+                        <div class="form-group">
+                            <label for="inp-reason">Lý do</label>
+                            <textarea class="form-control" name="reason" id="inp-reason" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+                <% } else { %>
+                    <h3 class="text-center">Không được phép nghỉ</h3>
+                <% } %>
             </div>
         </div>
     </div>
