--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -20,5 +20,14 @@
               </li>
           </ul>
         </div>
+          <% if (!isLoggedIn) { %> 
+            <form class="form-inline">
+              <button class="btn btn-info" type="submit">Đăng nhập</button>
+            </form>
+          <% } else { %> 
+            <form class="form-inline" action="/logout" method="post">
+              <button class="btn btn-danger" type="submit">Đăng xuất</button>
+            </form>
+          <% } %>
       </nav>
 </div>
