--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,11 +2,14 @@
     <div class="container">
         <% 
             function formatDate(d) {
-                return `${d.getDate()}/${d.getMonth()}/${d.getFullYear()}`
+                return `${d.getDate()}/${d.getMonth() + 1}/${d.getFullYear()}`
             }
         %>
         <h2 class="text-center">Thông tin nhân viên</h2>
-        <form class="mt-4" action="/thongtin" method="post">
+        <div class="text-center mt-4">
+            <img class="rounded mx-auto" width="200" height="200" src="<%= staff.imageUrl %>" alt="Avatar" />
+        </div>
+        <form action="/thongtin" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="inp-id">Mã</label>
                 <input type="text" class="form-control" id="inp-id" value="<%= staff.id %>" readonly>
@@ -37,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label for="inp-image">Ảnh</label>
-                <input type="text" class="form-control" id="inp-image" name="image" value="<%= staff.imageUrl %>">
+                <input type="file" class="form-control" id="inp-image" name="avatar">
             </div>
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
